# python-analytics-lw1

./: .env.sample  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
src/: config.py  main.py  utils.py
